issue #8: align status checkboxes and images on map view status control

--- a/webcontent/css/page/map/ControlView.css
+++ b/webcontent/css/page/map/ControlView.css
@@ -26,6 +26,11 @@ label.control {
     font-size: larger;
 }
 
+.status-checkbox-panel img {
+    vertical-align: top;
+    margin-right: .5em;
+}
+
 .status-checkbox-panel div {
     display: inline-block;
     margin-right: 1em;
